--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "json-pretty-parse",
+  "name": "json-pretty-parse-cli",
   "version": "1.0.0",
-  "description": "JSON parse & stringify",
+  "description": "Command line interface to unescape and format JSON data using stringify and parse",
   "main": "cli.js",
   "scripts": {
-    "test": "tape test.js | faucet"
+    "test": "xo && tape test.js | faucet"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/haroun/json-pretty-parse.git"
+    "url": "git+https://github.com/haroun/json-pretty-parse-cli.git"
   },
   "keywords": [
     "json",
@@ -19,9 +19,9 @@
   "author": "Harouna Traore",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/haroun/json-pretty-parse/issues"
+    "url": "https://github.com/haroun/json-pretty-parse-cli/issues"
   },
-  "homepage": "https://github.com/haroun/json-pretty-parse#readme",
+  "homepage": "https://github.com/haroun/json-pretty-parse-cli#readme",
   "devDependencies": {
     "dedent": "^0.7.0",
     "execa": "^0.8.0",
