--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
   "homepage": "https://github.com/haroun/json-pretty-parse-cli#readme",
   "devDependencies": {
     "dedent": "^0.7.0",
-    "execa": "^0.8.0",
+    "execa": "^0.10.0",
     "faucet": "0.0.1",
-    "tape": "^4.8.0",
-    "xo": "^0.18.2"
+    "tape": "^4.9.1",
+    "xo": "^0.21.1"
   },
   "dependencies": {
-    "get-stdin": "^5.0.1",
-    "meow": "^4.0.0"
+    "get-stdin": "^6.0.0",
+    "meow": "^5.0.0"
   },
+  "engines": [
+    9,
+    8,
+    7,
+    6
+  ],
   "bin": {
     "jsonpp": "cli.js"
   },
