update dependencies & fix lint issues

--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "homepage": "https://github.com/haroun/json-pretty-parse-cli#readme",
   "devDependencies": {
     "dedent": "^0.7.0",
-    "execa": "^4.0.0",
-    "faucet": "0.0.1",
-    "tape": "^4.13.2",
-    "xo": "^0.28.0"
+    "execa": "^5.0.0",
+    "faucet": "^0.0.1",
+    "tape": "^5.0.1",
+    "xo": "^0.36.1"
   },
   "dependencies": {
-    "get-stdin": "^7.0.0",
-    "meow": "^6.0.1"
+    "get-stdin": "^8.0.0",
+    "meow": "^8.0.0"
   },
   "bin": {
     "jsonpp": "cli.js"
