--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "scripts": {
    "debug": "node --inspect --inspect-brk cli.js",
-   "test": "tape test.js | faucet",
+   "test": "node test.js | faucet",
    "postversion": "git push && git push --tags",
    "pretest": "xo"
   },
@@ -28,7 +28,7 @@
   "devDependencies": {
     "dedent": "^0.7.0",
     "execa": "^5.0.0",
-    "faucet": "^0.0.1",
+    "faucet": "0.0.1",
     "tape": "^5.0.1",
     "xo": "^0.36.1"
   },
