--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "json-pretty-parse-cli",
   "version": "2.1.0",
   "description": "Command line interface to unescape and format JSON data using stringify and parse",
-  "main": "cli.js",
+  "exports": "./cli.js",
+  "type": "module",
   "scripts": {
-   "debug": "node --inspect --inspect-brk cli.js",
-   "test": "node test.js | faucet",
-   "postversion": "git push && git push --tags",
-   "pretest": "xo"
+    "debug": "node --inspect --inspect-brk cli.js",
+    "test": "node test.js | faucet",
+    "postversion": "git push && git push --tags",
+    "pretest": "xo"
   },
   "repository": {
     "type": "git",
@@ -27,20 +28,20 @@
   "homepage": "https://github.com/haroun/json-pretty-parse-cli#readme",
   "devDependencies": {
     "dedent": "^0.7.0",
-    "execa": "^5.0.0",
+    "execa": "^6.1.0",
     "faucet": "0.0.1",
     "tape": "^5.0.1",
-    "xo": "^0.36.1"
+    "xo": "^0.48.0"
   },
   "dependencies": {
-    "get-stdin": "^8.0.0",
-    "meow": "^8.0.0"
+    "get-stdin": "^9.0.0",
+    "meow": "^10.1.2"
   },
   "bin": {
-    "jsonpp": "cli.js"
+    "jsonpp": "./cli.js"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12"
   },
   "xo": {
     "space": true,
